fixing image routes and changing favicon

--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -11,8 +11,8 @@
   </footer>
 </div>
 <div class="container" id="second" >
-  <img src="assets\images\Typing-rafiki.png" alt="asd">
+  <img src="images/Typing-rafiki.png" alt="asd">
 
   <p>Már van fiókja? Jelentkezzen be!</p>
-  <button type="submit" id="reg">Bejelentkezés</button>
+  <button type="submit" id="reg" (click)="navigateToMain()">Bejelentkezés</button>
 </div>
