--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -10,7 +10,7 @@
   </footer>
 </div>
 <div class="container" id="second" >
-  <img src="assets\images\Sign up-bro.png" alt="asd">
+  <img src="images/Sign up-bro.png" alt="asd">
   <p>Még nincs fiókja? Csatlakozzon hozzánk!</p>
-  <button type="submit" id="reg">Regisztráció</button>
+  <button type="submit" id="reg" (click)="navigateToSignup()">Regisztráció</button>
 </div>
